fixed layout issue in delivery 2

--- a/web-alexIII/admin/assets/css/style.css
+++ b/web-alexIII/admin/assets/css/style.css
@@ -10,6 +10,9 @@ Premium: http://www.gridgum.com
 @import url(http://fonts.googleapis.com/css?family=Ruda:400,700,900);
 
 /* BASIC THEME CONFIGURATION */
+html{
+    scroll-behavior: smooth;
+}
 body {
     color: #797979;
 	background: #f2f2f2;
